# ada-python

./: .gitignore  .readthedocs.yaml  MANIFEST.IN  MANIFEST.in  Makefile  README.rst  benchmark.py  pyproject.toml  setup.cfg  setup.py  update-wpt.sh  update_ada.py  update_sdist.py
.github/workflows/: build.yml  build_test.yml  dependabot.yml  lint.yml  unit-tests.yml
ada_url/: __init__.py  ada.cpp  ada.h  ada_adapter.py  ada_build.py
docs/: conf.py  index.rst
requirements/: base.txt  development.txt
tests/: test_ada_url.py  test_what_url.py
what_url/: __init__.py  ada_adapter.py  ada_build.py
