[metadata]
name = what-url
version = 0.1.0
description = 'URL parser and manipulator based on the WHAT WG URL standard'
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Bo Bayles
author_email = bo@bbayles.com
license = Apache 2.0
license_files =
    LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    homepage = https://github.com/bbayles/what-url

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    cffi

[options.packages.find]
exclude =
    tests

[options.package_data]
what_url =
    *.c
    *.cpp
    *.o
    *.so
    *.h

[coverage:run]
include =
    what_url/**

[coverage:report]
exclude_lines = 
    if __name__ == .__main__.:
